# BepInSbox

./: .gitignore  BepInEx.sln  BepInSbox.sln  CMakeLists.txt  Directory.Build.props  README.md  after.BepInSbox.sln.targets  before.BepInSbox.sln.targets  build.cmd  run_bepinsbox.cs
BepInEx.Core/: BepInEx.Core.csproj  Paths.cs  Utility.cs
BepInEx.Core/Bootstrap/: BaseChainloader.cs
BepInEx.Core/Logging/: DiskLogListener.cs
BepInEx.Core/Properties/: AssemblyInfo.cs
BepInEx.Core/Sandbox/: BaseSandboxPlugin.cs  EngineHooks.cs
BepInEx.Preloader.Core/: BepInEx.Preloader.Core.csproj  PlatformUtils.cs
BepInEx.Preloader.Core/Logging/: ChainloaderLogHelper.cs
BepInEx.Preloader.Core/Patching/: PatcherContext.cs
BepInSbox.Core/: BepInSbox.Core.csproj  Paths.cs  Utility.cs
BepInSbox.Core/Bootstrap/: BaseChainloader.cs  TypeLoader.cs
BepInSbox.Core/Configuration/: AcceptableValueBase.cs  AcceptableValueList.cs  AcceptableValueRange.cs  ConfigDefinition.cs  ConfigDescription.cs  ConfigEntryBase.cs  ConfigFile.cs  SettingChangedEventArgs.cs  TomlTypeConverter.cs  TypeConverter.cs
BepInSbox.Core/Console/: ConsoleManager.cs  IConsoleDriver.cs
BepInSbox.Preloader.Core/: AssemblyBuildInfo.cs  BepInSbox.Preloader.Core.csproj  EnvVars.cs  InternalPreloaderLogger.cs  PlatformUtils.cs
Doorstop/: CMakeLists.txt  Cargo.toml  Doorstop.filters  Doorstop.vcxproj  dllmain.cpp  dllmain.def  dllmain.h
Doorstop/src/: bcrypt_def.rs  hid_def.rs  lib.rs  winhttp_def.rs  xinput_def.rs
Doorstop/src/lib/: coreclr_delegates.rs  hostfxr.rs  nethost.rs
(+55 files in other folders)
