[package]
name = "Doorstop"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused = "allow"

[dependencies]
libloading = "0.9.0"

[target.'cfg(target_family = "windows")'.dependencies]
windows = {
	version = "0.62.2",
	features = [
	"Win32_System_Com",
	"Win32_System_Threading",
	"Win32_UI",
	"Win32_UI_WindowsAndMessaging",
	"UI",
	"Win32_System_LibraryLoader",
	"Win32_UI_Shell",
	"Win32_System_SystemServices",
	]
}
